# image_stitching

./: .gitignore  README.md  temp.cpp
backend/: pom.xml
backend/documentation/: RunProgram.md
backend/src/main/java/com/example/imagestitching/service/: .gitignore  CMakeLists.txt  ImageStitcherService.java  JNIService.java  com_example_imagestitching_service_JNIService.cpp  com_example_imagestitching_service_JNIService.h
backend/src/main/java/com/example/imagestitching/service/header/: stitcher.hpp
backend/src/main/java/com/example/imagestitching/service/source/: imageproc.cpp  stitcher.cpp
backend/stitch/: CMakeLists.txt
backend/stitch/header/: stitcher.hpp
backend/stitch/source/: stitcher.cpp
documentation/: Algorithms.md  README.md  RunProgram.md  Run_exe.md  StitchClassDefinition.md
frontend/: package-lock.json  package.json
frontend/image-stitching/: package-lock.json  package.json  tailwind.config.js
frontend/image-stitching/src/: App.js
frontend/src/: App.js
frontend/src/components/: FileUpload.js
frontend/src/pages/: Samples.js
frontend/src/ui/: Navbar.js
opencv/: CMakeCache.txt  CMakeLists.txt  Features  Makefile  Stitcher  cmake_install.cmake  feature_detection.cpp  input  input.txt
opencv/header/: stitch.hpp  stitcher.hpp
opencv/source/: main.cpp  stitch.cpp  stitcher.cpp
stitch/header/: Feature.hpp  Mat.hpp  Orb.hpp  imageproc.hpp  stitch.hpp  stitcher.hpp
stitch/img/: img1.ppm  img2.ppm
stitch/source/: Feature.cpp  Mat.cpp  Orb.cpp  Stitch.cpp  a.out  fast.py  main.cpp  resized.ppm  test.cpp
(+11 files in other folders)
