cmake_minimum_required(VERSION 3.0)
project( Stitcher )
find_package( OpenCV REQUIRED )
find_package(Java REQUIRED)
find_package(JNI)
if (NOT JNI_FOUND)
    set(JAVA_HOME $ENV{JAVA_HOME})
    set(JAVA_INCLUDE_PATH "${JAVA_HOME}include")
    set(JAVA_INCLUDE_PATH2 "${JAVA_HOME}include/darwin") 
    set(JAVA_AWT_INCLUDE_PATH "${JAVA_HOME}include")
    set(JNI_INCLUDE_DIRS "${JAVA_INCLUDE_PATH}" "${JAVA_INCLUDE_PATH2}")
    set(JNI_LIBRARIES "${JAVA_HOME}lib")
endif()
message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${CMAKE_SOURCE_DIR}/header)
include_directories(${JAVA_INCLUDE_DIRS})
include_directories(${JNI_INCLUDE_DIRS})
add_library(stitcher SHARED com_example_imagestitching_service_JNIService.cpp source/stitcher.cpp)
target_link_libraries( stitcher ${OpenCV_LIBS} ${JNI_LIBRARIES})
